correct MySql configuration - dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=testuser
 spring.datasource.password=temp-password
 
 # hibernate properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # create, create-drop
 spring.jpa.hibernate.ddl-auto=update
